--- a/env/Project.toml
+++ b/env/Project.toml
@@ -1,9 +1,20 @@
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 Effects = "8f03c58b-bd97-4933-a826-f71b64d2cca2"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Packing = "19eb6ba3-879d-56ad-ad62-d5c202156566"
+Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
 PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 ShiftedArrays = "1277b4bf-5013-50f5-be3d-901d8477a67a"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+TopoPlots = "2bdbdf9c-dbd8-403f-947b-1a4e0dd41a7a"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 UnfoldMakie = "69a5ce3b-64fb-4f22-ae69-36dd4416af2a"
